--- a/tests/regression/eval/heads_a.tml
+++ b/tests/regression/eval/heads_a.tml
@@ -1,6 +1,14 @@
 # Testing more heads
 
-eval(r q q`
-  e(1 "2"), e("2" '3'), e('3' four), e(four 5).
+max(10000).
+
+@domain dom 5 3.
+
+@quote q dom `
+  e(0 1), e(1 2), e(2 3), e(3 4).
   t(?x ?y) :- e(?x ?y).
-  t(?x ?y), t(?y ?x) :- t(?x ?z), t(?z ?y).`).
+  t(?x ?y), t(?y ?x) :- t(?x ?z), t(?z ?y).`.
+
+@eval r dom q 50.
+
+@codec cdc dom r 2.
