--- a/tests/regression/eval/ref_sym_a.tml
+++ b/tests/regression/eval/ref_sym_a.tml
@@ -1,9 +1,17 @@
 # Testing reflexive symetric closure
 
-eval(r q q`
+max(10000).
+
+@domain dom 4 2.
+
+@quote q dom `
+  e(0 1).
   e(1 2).
   e(2 3).
-  e(3 4).
   t(?x ?y) :- e(?x ?y).
   t(?x ?x) :- t(?x ?z).
-  t(?x ?y) :- t(?y ?x).`).
+  t(?x ?y) :- t(?y ?x).`.
+
+@eval r dom q 50.
+
+@codec cdc dom r 2.
